# Stellaris__Nation-Planet-Dashboard

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  clean.ps1  run.ps1  settings.config  settings.example.config  vcpkg.json
docs/: dashboard-country-schema-v0.1.md
parser-program-files/include/: ast.hpp  cli.hpp  common.hpp  config.hpp  country_colony_export.hpp  country_demographics_export.hpp  country_export.hpp  country_export_helpers.hpp  country_finance_export.hpp  country_leader_export.hpp  country_map_export.hpp  country_market_export.hpp  country_military_export.hpp  game_indexes.hpp  json_writer.hpp  localization.hpp  manifest.hpp  pdx_parser.hpp  performance.hpp  save_reader.hpp  self_test.hpp  timeline_export.hpp  utils.hpp
parser-program-files/src/: ast.cpp  cli.cpp  config.cpp  country_colony_export.cpp  country_demographics_export.cpp  country_export.cpp  country_export_helpers.cpp  country_finance_export.cpp  country_leader_export.cpp  country_map_export.cpp  country_market_export.cpp  country_military_export.cpp  game_indexes.cpp  json_writer.cpp  localization.cpp  main.cpp  manifest.cpp  pdx_parser.cpp  performance.cpp  save_reader.cpp  self_test.cpp  timeline_export.cpp  utils.cpp
